--- a/template-iam.yaml
+++ b/template-iam.yaml
@@ -1,7 +1,19 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: An AWS Serverless Specification template describing your function.
+Parameters:
+  DeployBucketName:
+    Type: String
 Resources:
+  GreetingApi:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: 'prod'
+      DefinitionBody:
+        Fn::Transform:
+          Name: AWS::Include
+          Parameters:
+            Location: !Sub 's3://${DeployBucketName}/openapi.yaml'
   MyGreetingDynamoDBGetFunction:
     Type: 'AWS::Serverless::Function'
     Properties:
@@ -17,6 +29,7 @@ Resources:
           Properties:
             Path: /hello/{lang}
             Method: GET
+            RestApiId: !Ref GreetingApi
       Environment:
         Variables:
           DYNAMDB_LOCALURL: ''
@@ -36,6 +49,7 @@ Resources:
           Properties:
             Path: /hello/{lang}
             Method: PUT
+            RestApiId: !Ref GreetingApi
       Environment:
         Variables:
           DYNAMDB_LOCALURL: ''
@@ -86,3 +100,6 @@ Resources:
               - Effect: "Allow"
                 Action: "dynamodb:*"
                 Resource: "*"
+Outputs:
+  GreetingApiUri:
+    Value: !Sub "https://${GreetingApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
