--- a/template-noauth.yaml
+++ b/template-noauth.yaml
@@ -1,6 +1,11 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: An AWS Serverless Specification template describing your function.
+Globals:
+  Function:
+    Runtime: nodejs8.10
+    MemorySize: 128
+    Timeout: 15
 Resources:
   GreetingApi:
     Type: AWS::Serverless::Api
@@ -10,10 +15,7 @@ Resources:
     Type: 'AWS::Serverless::Function'
     Properties:
       Handler: MyGreetingDynamoDBGetFunction/index.handler
-      Runtime: nodejs6.10
       Description: ''
-      MemorySize: 128
-      Timeout: 15
       Role: !GetAtt MyGreetingDynamoDBRole.Arn
       Events:
         LambdaMicroservice:
@@ -30,10 +32,7 @@ Resources:
     Type: 'AWS::Serverless::Function'
     Properties:
       Handler: MyGreetingDynamoDBPutFunction/index.handler
-      Runtime: nodejs6.10
       Description: ''
-      MemorySize: 128
-      Timeout: 15
       Role: !GetAtt MyGreetingDynamoDBRole.Arn
       Events:
         LambdaMicroservice:
